codex-rs/tui/src/snapshots/codex_tui__thread_tree_view__tests__keeps_linear_descendants_on_their_branch_lane.snap
---
source: tui/src/thread_tree_view.rs
expression: render_rows(tree)
---
root -- Before the first user turn
first -- turn turn-1 - 2 branches - active path
|- second B -- turn turn-2b - active path
|  third B -- turn turn-3b - active path
`- second A -- turn turn-2a
