codex-rs/tui/src/snapshots/codex_tui__thread_tree_view__tests__renders_linear_history_without_nested_indentation.snap
---
source: tui/src/thread_tree_view.rs
expression: render_rows(tree)
---
root -- Before the first user turn
first -- turn turn-1 - active path
second -- turn turn-2 - active path
third -- turn turn-3 - active path
